--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,22 @@
+# Flake8
 flake8==3.5.0
 mccabe==0.6.1
 pycodestyle==2.3.1
 pyflakes==1.6.0
+
+# Pytest
+py==1.6.0
+more-itertools==4.3.0
+six==1.11.0
+attrs==18.2.0
+pluggy==0.7.1
+atomicwrites==1.2.1
+colorama==0.3.9
+pytest==3.8.2
+pytest-mock==1.10.0
+
+# Converage
+coverage==4.5.1
+pytest-cov==2.6.0
+
 -r requirements.txt
